# mutest

./: .appveyor.yml  .coveralls.yml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  README.md  TODO.md  meson.build  meson_options.txt
.appveyor/: msvc.bat  msys2-pre.sh  msys2.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: alpine-gcc-latest.yml  msvc-env.yml  ubuntu-clang-latest.yml  ubuntu-gcc-latest.yml
.travis-ci/: Dockerfile  run-ci.sh  run-coverage.sh  run-docker.sh  run-static.sh  run-tests.sh
docs/: apidoc.css  mutest-general.md.html  mutest-hooks.md.html  mutest-matchers.md.html  mutest-wrappers.md.html  mutest.md.html
include/: meson.build  mutest.h
src/: meson.build  mutest-expect-funcs.c  mutest-expect-types.c  mutest-expect.c  mutest-format-mocha.c  mutest-format-tap.c  mutest-main.c  mutest-matchers.c  mutest-private.h  mutest-spec.c  mutest-suite.c  mutest-utils.c  mutest-wrappers.c
tests/: general.c  hooks.c  meson.build  types.c
